// src/main/proto/user.proto
syntax = "proto3";

package com.chatserver.grpc;

option java_package = "com.chatserver.grpc";
option java_outer_classname = "UserProto";
option java_multiple_files = true;

service UserService {
  rpc GetUser(UserRequest) returns (UserResponse);
  rpc RegisterUser(RegisterUserRequest) returns (UserResponse);
  rpc UpdateUserStatus(UpdateStatusRequest) returns (StatusResponse);
}

message UserRequest {
  string username = 1;
}

message RegisterUserRequest {
  string username = 1;
}

message UpdateStatusRequest {
  string username = 1;
  bool is_online = 2;
}

message UserResponse {
  string username = 1;
  bool is_online = 2;
  string created_at = 3;
  string last_seen = 4;
}

message StatusResponse {
  bool success = 1;
  string message = 2;
}
